--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@imgix/gatsby": "^2.1.2",
     "dotenv": "^16.0.3",
     "gatsby": "^5.0.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
@@ -24,18 +25,22 @@
     "gatsby-plugin-google-tagmanager": "^5.5.0",
     "gatsby-plugin-image": "^3.7.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sass": "^6.7.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
+    "gatsby-plugin-sharp": "^5.7.0",
     "gatsby-plugin-sitemap": "^6.3.1",
     "gatsby-remark-responsive-iframe": "^6.5.0",
     "gatsby-source-filesystem": "^5.3.1",
     "gatsby-source-microcms": "^3.0.0",
     "gatsby-transformer-remark": "^6.5.0",
+    "gatsby-transformer-sharp": "^5.7.0",
     "jquery": "^3.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "sass": "^1.58.3",
     "swiper": "^8.4.5"
   },
   "repository": {
@@ -44,11 +49,5 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
-  "devDependencies": {
-    "gatsby-plugin-sass": "^6.3.0",
-    "gatsby-plugin-sharp": "^5.5.0",
-    "gatsby-transformer-sharp": "^5.5.0",
-    "sass": "^1.56.2"
   }
 }
