--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby": "^5.9.1",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-canonical-urls": "^5.3.0",
+    "gatsby-plugin-google-gtag": "^5.10.0",
     "gatsby-plugin-google-tagmanager": "^5.5.0",
     "gatsby-plugin-image": "^3.9.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
