--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@imgix/gatsby": "^2.1.3",
+    "dayjs": "^1.11.9",
+    "dayjs-plugin-utc": "^0.1.2",
+    "dayjs-timezone-iana-plugin": "^0.1.0",
     "dotenv": "^16.3.1",
     "gatsby": "^5.11.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
