--- a/package.json
+++ b/package.json
@@ -16,23 +16,23 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@imgix/gatsby": "^2.1.3",
     "dotenv": "^16.3.1",
-    "gatsby": "^5.11.0",
+    "gatsby": "^5.12.4",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-canonical-urls": "^5.11.0",
     "gatsby-plugin-google-gtag": "^5.11.0",
     "gatsby-plugin-google-tagmanager": "^5.11.0",
-    "gatsby-plugin-image": "^3.11.0",
+    "gatsby-plugin-image": "^3.12.0",
+    "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sass": "^6.11.0",
+    "gatsby-plugin-sass": "^6.12.0",
     "gatsby-plugin-sharp": "^5.11.0",
     "gatsby-plugin-sitemap": "^6.11.0",
     "gatsby-remark-responsive-iframe": "^6.11.1",
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-source-microcms": "^3.0.0",
     "gatsby-transformer-remark": "^6.11.0",
-    "gatsby-transformer-sharp": "^5.11.0",
+    "gatsby-transformer-sharp": "^5.12.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
