投稿エラー修正中

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "date-fns-tz": "^2.0.0",
+    "dayjs": "^1.11.10",
+    "dayjs-timezone-iana-plugin": "^0.1.0",
     "dotenv": "^16.3.1",
     "gatsby": "^5.12.4",
     "gatsby-plugin-anchor-links": "^1.2.1",
