パッケージをすべてアップデート

--- a/package.json
+++ b/package.json
@@ -13,35 +13,36 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "date-fns-tz": "^2.0.0",
     "dayjs": "^1.11.10",
     "dayjs-timezone-iana-plugin": "^0.1.0",
     "dotenv": "^16.3.1",
-    "gatsby": "^5.12.4",
+    "gatsby": "^5.12.5",
     "gatsby-plugin-anchor-links": "^1.2.1",
-    "gatsby-plugin-canonical-urls": "^5.11.0",
-    "gatsby-plugin-google-gtag": "^5.11.0",
-    "gatsby-plugin-google-tagmanager": "^5.11.0",
+    "gatsby-plugin-canonical-urls": "^5.12.0",
+    "gatsby-plugin-google-gtag": "^5.12.0",
+    "gatsby-plugin-google-tagmanager": "^5.12.0",
     "gatsby-plugin-image": "^3.12.0",
-    "gatsby-plugin-netlify": "^5.1.0",
+    "gatsby-plugin-netlify": "^5.1.1",
     "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sass": "^6.12.0",
-    "gatsby-plugin-sharp": "^5.11.0",
-    "gatsby-plugin-sitemap": "^6.11.0",
-    "gatsby-remark-responsive-iframe": "^6.11.1",
-    "gatsby-source-filesystem": "^5.11.0",
+    "gatsby-plugin-sharp": "^5.12.0",
+    "gatsby-plugin-sitemap": "^6.12.0",
+    "gatsby-remark-responsive-iframe": "^6.12.0",
+    "gatsby-source-filesystem": "^5.12.0",
     "gatsby-source-microcms": "^3.0.0",
-    "gatsby-transformer-remark": "^6.11.0",
+    "gatsby-transformer-remark": "^6.12.0",
     "gatsby-transformer-sharp": "^5.12.0",
+    "path": "^0.12.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-scroll": "^1.8.9",
-    "sass": "^1.63.6",
+    "sass": "^1.68.0",
     "swiper": "^8.4.7"
   },
   "repository": {
