--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dayjs-timezone-iana-plugin": "^0.1.0",
     "dotenv": "^16.3.1",
     "gatsby": "^5.12.5",
+    "gatsby-cli": "^5.12.1",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-canonical-urls": "^5.12.0",
     "gatsby-plugin-google-gtag": "^5.12.0",
@@ -51,5 +52,8 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "devDependencies": {
+    "babel-plugin-lodash": "^3.3.4"
   }
 }
