SEO対策について各種調整 wwwありでアクセスするとGatsbyCloudのエラーページが出たのでwwwなしに統一

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "gatsby-plugin-htaccess": "^1.4.0",
+    "gatsby-plugin-netlify": "^5.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swiper": "^8.4.7"
